--- a/boat_owner_app/package.json
+++ b/boat_owner_app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
+    "firebaseui": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
